ticken/k8s/deps/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticken-rabbitmq

  template:
    metadata:
      labels:
        app: ticken-rabbitmq

    spec:
      containers:
        - name: ticken-rabbitmq
          image: ${RABBITMQ_IMAGE}
          ports:
            # access the web interface
            - containerPort: 15672
              name: rbmq-mngm-port

              # send meessage
            - containerPort: 5672
              name: rbmq-msge-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip
spec:
  type: ClusterIP
  selector:
    app: ticken-rabbitmq

  ports:
    - name: rbmq-mngm-port
      protocol: TCP
      port: 15672
      targetPort: 15672

    - name: rbmq-msge-port
      protocol: TCP
      port: 5672
      targetPort: 5672
