ticken/k8s/deps/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticken-keycloak

  template:
    metadata:
      labels:
        app: ticken-keycloak

    spec:
      volumes:
        - name: artifacts
          persistentVolumeClaim:
            claimName: common-pvc

      containers:
        - name: ticken-keycloak
          image: ${KEYCLOAK_IMAGE}
          args: ["start-dev"]
          ports:
            # access the web interface
            - containerPort: 8080
              name: service

          volumeMounts:
            - name: artifacts
              mountPath: /opt/keycloak/themes
              subPath: keycloak-themes

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-clusterip
spec:
  type: ClusterIP
  selector:
    app: ticken-keycloak

  ports:
    - name: service
      protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticken.auth.com # for testing only
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-clusterip
                port:
                  number: 80
